--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
 				<div class="inner">
 					<ul class="col4">
 						<li>
-							<p class="img"><a href="READINGEXPLORER2.html" target="_blank" rel="noopener"><img src="images/READIN_GEXPLORER_2.jpg" width="168" height="168" alt=""></a></p>
+							<p class="img"><a href="textbook_answer/READINGEXPLORER2.html" target="_blank" rel="noopener"><img src="images/READIN_GEXPLORER_2.jpg" width="168" height="168" alt=""></a></p>
 							<p>READING_EXPLORER_2 second_edition</p>
 						</li>
 						<li>
-							<p class="img"><a href="ImpactIssues2.html" target="_blank" rel="noopener"><img src="images/Impact_Issues_2.jpg" width="168" height="168" alt=""></a></p>
+							<p class="img"><a href="textbook_answer/ImpactIssues2.html" target="_blank" rel="noopener"><img src="images/Impact_Issues_2.jpg" width="168" height="168" alt=""></a></p>
 							<p>Impact_Issues_2 new_edition</p>
 						</li>
 						<li>
-							<p class="img"><a href="SelectReadings.html" target="_blank" rel="noopener"><img src="images/Select_Readings.jpg" width="168" height="168" alt=""></a></p>
+							<p class="img"><a href="textbook_answer/SelectReadings.html" target="_blank" rel="noopener"><img src="images/Select_Readings.jpg" width="168" height="168" alt=""></a></p>
 							<p>Select_Readings second_edition</p>
 						</li>
 					</ul>
